--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
     "dev": "env-cmd ./config/dev.env nodemon server.js"
-
   },
   "author": "Vikas kumar",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11"
@@ -20,5 +20,5 @@
   "devDependencies": {
     "env-cmd": "^8.0.2",
     "nodemon": "^2.0.7"
-}
+  }
 }
